<resources>
    <string name="app_name">PetZoo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="txt_new_alert">Nueva alerta</string>
    <string name="txt_add_image">Añadir imágenes</string>
    <string name="txt_edit_text_alert_description">Haz una descripción de tu alerta</string>
    <string name="txt_button_register_alert">Registrar alerta</string>
    <string name="txt_button_cancel">Cancelar</string>
    <string name="title_activity_map_drag">Map</string>
    <string name="add_location">Agregar ubicación</string>
    <string name="add_current_location">Agregar mi ubicación actual</string>
    <string name="alert_detail_animal">Detalle de alerta animal</string>
    <string name="new_alert_description">Descripción:</string>
    <string name="textview_new_alert_descripcion">Reporte de perro perdido</string>
    <string name="mascor_class_new_alert">Clase de mascota:</string>
</resources>
