<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaAlertaFragment"
    android:padding="20dp">
    <ScrollView
        android:id="@+id/newAlertScrollContainer"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:text="@string/txt_new_alert"/>
            <Button
                android:id="@+id/btnAddPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_image"/>

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/imageAlert"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="200dp"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:inputType="text|textMultiLine"
                android:hint="@string/txt_edit_text_alert_description"/>

            <Spinner
                android:id="@+id/spnMascotCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnRegisterAlert"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_button_register_alert"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:layout_weight="1"
                    android:id="@+id/btnCancelCreateAlert"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_button_cancel"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>