<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".AlertDetailActivity"
    android:padding="20dp">
    <LinearLayout
        android:id="@+id/containerAlertDetail"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert_detail_animal"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_alert_description"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:textSize="20sp"
                android:text="@string/textview_new_alert_descripcion"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mascor_class_new_alert"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_clase_mascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:textSize="20dp"
                android:text="Reporte de  perdido"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Autor de la alerta:"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_persona_reporta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="20dp"
                android:text="Reporte de  perdido"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estado de alerta:"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_estado_alerta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="20dp"
                android:text="Reporte de  perdido"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>